Fixed point experiments

--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -190,6 +190,55 @@
     " -2.265625    0.9921875'''.split())))\n",
     "px.line(received)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fixed-point math representation and precision experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cocotb.binary import BinaryValue\n",
+    "from fxpmath import Fxp\n",
+    "\n",
+    "q = lambda x: Fxp(x, True, 16, 12)\n",
+    "bn = BinaryValue\n",
+    "\n",
+    "print(q(0.125).bin(True), q(-3).bin(True), (q(0.125)*q(-3)).bin(True))\n",
+    "# bn('1111_111000000000'), bn('1101_000000000000'), bn(bn('1111111000000000') * bn('1101000000000000')).binstr\n",
+    "print(bn('0000_001000000000'), bn('1101_000000000000'), bn(bn('0000_001000000000') * bn('1'*16+'1101_000000000000')).binstr)\n",
+    "'11111111101000000000000000000000' == '11111111111111111101000000000000000000000'[-32:]\n",
+    "Fxp(12, True, 32, 24).bin(), Fxp(12, True, 32, 24).like(q(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = q('b0000000001111010')\n",
+    "b = q('b1111111111111100')\n",
+    "res = a * b\n",
+    "a, b, res, res.bin(), q('b'+res.bin()[4:4+16])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_list = [0, 0.001, 0.03, 0.12, 1]\n",
+    "a_list = a_list + (-np.asarray(a_list)).tolist()\n",
+    "a_list\n"
+   ]
   }
  ],
  "metadata": {
