Finalize circular convolution

--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -22,6 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "import json\n",
     "import numpy as np\n",
     "from numpy.fft import fft, ifft\n",
     "import scipy\n",
@@ -29,7 +31,9 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "from circular_convolution import cc_direct, cc_fft\n"
+    "from circular_convolution import cc_direct, cc_fft\n",
+    "\n",
+    "SIM_BUILD_DIR = Path('.') / '../sim_build'"
    ]
   },
   {
@@ -70,6 +74,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_LOG_FILE = SIM_BUILD_DIR / 'data.log'\n",
+    "\n",
+    "raw_datalog = np.asarray(json.loads(DATA_LOG_FILE.read_text()))\n",
+    "indata, outdata, expdata = np.hstack(raw_datalog)\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_scatter(y=indata, name='input')\n",
+    "fig.add_scatter(y=outdata, name='actual output')\n",
+    "fig.add_scatter(y=expdata, name='expected')\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path('./circular_convolution.html').write_text(fig.to_html(include_plotlyjs='cdn', default_height='70%'), encoding='utf-8')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,10 +126,10 @@
     "    return module\n",
     "\n",
     "\n",
-    "module_name = 'test'\n",
-    "module_path = Path('../sim/cocotb/test.py').resolve()\n",
-    "cotest = import_from_path(module_name, module_path)\n",
-    "cotest"
+    "# module_name = 'test'\n",
+    "# module_path = Path('../sim/cocotb/test.py').resolve()\n",
+    "# cotest = import_from_path(module_name, module_path)\n",
+    "# cotest"
    ]
   },
   {
@@ -107,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(cotest)\n",
+    "# importlib.reload(cotest)\n",
     "import numpy as np\n",
     "\n",
     "x = np.linspace(0, 10)\n",
@@ -123,10 +154,10 @@
     "import itertools\n",
     "import fxpmath\n",
     "\n",
-    "bin_array = cotest.convert_float_to_logic(y)\n",
+    "# bin_array = cotest.convert_float_to_logic(y)\n",
     "\n",
-    "print(np.asarray([fxpmath.Fxp('b'+''.join(binstr), signed=True, n_word=16, n_frac=12) for binstr in itertools.batched(bin_array.binstr, cotest.XLEN)]))\n",
-    "cotest.convert_logic_to_float(cotest.convert_float_to_logic(x))"
+    "# print(np.asarray([fxpmath.Fxp('b'+''.join(binstr), signed=True, n_word=16, n_frac=12) for binstr in itertools.batched(bin_array.binstr, cotest.XLEN)]))\n",
+    "# cotest.convert_logic_to_float(cotest.convert_float_to_logic(x))"
    ]
   },
   {
